Page MenuHome GnuPG

Cannot add an existing Curve 25519 subkey
Closed, ResolvedPublic

Description

Adding a subkey by keygrip works for other key types, but not ed25519 or
cv25519. I've attached a transcript of a set of GPG commands that fails (but
works with RSA).

The transcript ends with "No key with this keygrip" which is a lie; it's
found, but common/sexputil.c:get_pk_algo_from_canon_sexp doesn't handle algo
"ecc" and things eventually fail. This particular example seems to work fine
if I just hard-code it to go to the "eddsa" case, but that can't possibly be
the right solution :)

Details

Version
2.1.18